# sktime-tutorial-ODSC-Europe-2024

./: .gitignore  README.md  requirements.txt  requirements_full.txt  requirements_lite.txt
data/: README.md  mgab.csv  mitdb.csv
example_package/: pyproject.toml
example_package/examples/: airline_data.ipynb
example_package/src/ensemble_forecaster/: __init__.py  forecaster.py
example_package/tests/: test_check_estimator.py
notebooks/: 00_introduction.ipynb  01_forecasting.ipynb  02_deep_learning.ipynb  03_annotation.ipynb  03_anomaly_changepoints.ipynb  04_customization.ipynb  05_outro.ipynb  3_annotation.ipynb  annotation.ipynb  utils.py
